secondary desktop Header wasn't visible in fixed + overflow-y scroll

--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -47,6 +47,7 @@
     transition: top $menu-transition
     &--show
       top: 0
+      overflow-y: visible
   border-bottom: 1px solid rgba(0, 0, 0, 0)
   transition: border-bottom $menu-transition-long
   &--secondary
